# bytechomp

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  python-package.yml
bytechomp/: __init__.py  basic_parsing_element.py  byte_order.py  data_descriptor.py  datatypes.py  reader.py  serialization.py
bytechomp/datatypes/: __init__.py  declarations.py  lookups.py
examples/: parse-sqlite-header.py  tcp-client-server.py  test-reader.py
tests/: test_byte_order.py  test_package.py  test_reader.py  test_reader_api.py  test_reader_features.py
tests/integration/: test_read_write.py
tests/reader/: test_reader_api.py  test_reader_features.py
tests/serialization/: test_field_validation.py  test_serialization_api.py
